--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Github Profile</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/27ad66089e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
