--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
    <script src="https://kit.fontawesome.com/27ad66089e.js" crossorigin="anonymous"></script>
+   <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://github.githubassets.com/favicons/favicon.svg">
 </head>
 
 <body>
