work on Flag icon over profile img

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="card">
             <div class="year-bg" id="year-bg"></div>
-                <div class="img-profile" id="img-profile"></div>
+                <div class="img-profile" id="img-profile"><div id="img-flag"></div></div>
     
                 <div class="user-info">
                     <h2>
